Fix positioning on mobile landscape view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -344,6 +344,10 @@ body {
       text-align: center;
       left: -50px;
     }
+
+    .session-body {
+      position: absolute !important;
+    }
 }
 
 /* Subheader */
